<resources>

    <string name="kakao_app_key">앱키</string>
    <string name="app_name">GRAMy</string>

    <!-- Toolbar_text -->
    <string name="homeToolbar">GRAMy</string>
    <string name="newsToolbar">News</string>
    <string name="settingToolbar">Setting</string>

    <!-- fragReportmain -->
    <string name="tvShelfTitel">선반</string>

    <!-- Main -->
    <string name="tvTitle">GRAMy</string>
    <string name="btnHome"></string>
    <string name="btnNews"></string>
    <string name="btnAccount"></string>
    <string name="btnSetting"></string>

    <!-- Login-->
    <string name="edtId"></string>
    <string name="edtPw"></string>
    <string name="loginTitle">로그인</string>
    <string name="loginSub">아이디와 비밀번호 입력하기 귀찮으시죠? \n소셜로그인으로 1초만에 로그인하세요.</string>
    <string name="btnLogin">로그인</string>
    <string name="btnFacebookLogin"></string>
    <string name="btnKakaoLogin"></string>
    <string name="btnNaverLogin"></string>
    <string name="tvId">아이디</string>
    <string name="tvPw">비밀번호</string>
    <string name="tvLogin">기존회원이세요?</string>
    <string name="checkAutoLogin">자동 로그인</string>
    <string name="btnFindId">아이디 찾기</string>
    <string name="btnFindPw">비밀번호 찾기</string>
    <string name="btnGoJoin">회원가입</string>
    <string name="tvGoJoin">혹시, GRAMy가 처음이신가요?</string>

    <!-- FindId -->
    <string name="tvFindIdTitle">아이디 찾기</string>
    <string name="tvFindIdName">이름</string>
    <string name="tvFindIdPhone">핸드폰</string>
    <string name="edtHintFindIdName">이름을 입력하세요.</string>
    <string name="edtHintFindIdPhone">번호를 입력하세요.</string>
    <string name="btnSearchId">아이디 검색</string>
    <string name="btnGoLogin">로그인 하기</string>

    <!-- FindPw -->
    <string name="tvFindPwTitle">비밀번호 찾기</string>
    <string name="tvFindPwId">아이디</string>
    <string name="tvFindPwName">이름</string>
    <string name="tvFindPwPhone">핸드폰</string>
    <string name="edtHintFindPwId">아이디을 입력하세요.</string>
    <string name="edtHintFindPwName">이름을 입력하세요.</string>
    <string name="edtHintFindPwPhone">번호를 입력하세요.</string>
    <string name="btnSearchPw">비밀번호 검색</string>
    <string name="tvTitleModifyPw">비밀번호 수정</string>
    <string name="tvModifyPw">비밀번호 변경</string>
    <string name="tvReModifyPw">비밀번호 확인</string>
    <string name="edtHintModifyPw">수정할 비밀번호를 입력해주세요.</string>
    <string name="edtHintReModifyPw">비밀번호를 다시 입력해주세요.</string>
    <string name="btnReModifyPw">비밀번호 수정하기</string>
    <string name="btnGoLoginPw">로그인 하기</string>

    <!--modify -->
    <string name="btnModify">수정하기</string>
    <string name="btnCancel">취소하기</string>

    <!-- Agreement-->
    <string name="joinTitle">회원가입</string>
    <string name="agreeMentTitle">반갑습니다. \n약관동의가 필요합니다.</string>
    <string name="ckAll">전체동의</string>
    <string name="ckGramy">GRAMy 이용약관 동의 (필수)</string>
    <string name="ckPersonal">개인정보 수집 이용 동의 (필수)</string>
    <string name="ckPersonalChoose">개인정보 제3자 제공 동의 (선택)</string>
    <string name="ckMarketing">마케팅 정보메일, SMS 수신동의 (선택)</string>
    <string name="btnNext">다음으로</string>
    <string name="ckAgeYes">만 14세 이상입니다.</string>
    <string name="ckAgeNo">만 14세 미만입니다. \n</string>
    <string name="tvAgeNo">본인확인이 된 보호자의 GRAMy계정이 필요합니다.</string>
    <string name="btnShowAgreement">〉</string>

    <!-- Join-->
    <string name="tvJoinId">이메일</string>
    <string name="tvJoinPw">비밀번호</string>
    <string name="tvJoinPwCheck">비밀번호 확인</string>
    <string name="tvJoinName">이름</string>
    <string name="tvJoinPhone">휴대폰</string>
    <string name="tvJoinAddr">주소</string>
    <string name="tvAddrSub">여러개의 매장을 관리하고 싶다면, \n회원가입 후 마이페이지에서 추가할 수 있습니다.</string>
    <string name="tvJoinGender">성별</string>
    <string name="edtJoinId"></string>
    <string name="edtJoinPw"></string>
    <string name="edtJoinPwCheck"></string>
    <string name="edtJoinName"></string>
    <string name="edtJoinAddr"></string>
    <string name="edtJoinPhone"></string>
    <string name="btnJoin">가입하기</string>
    <string name="btnIdCheck">중복확인</string>
    <string name="radioMan">남성</string>
    <string name="radioWoman">여성</string>
    <string name="radioNoting">상관없음</string>

    <!-- activity_tutorial.xml -->
    <string name="btnTutorialEnd">시작하기</string>

    <!-- fragment_tutorial1.xml-->
    <string name="tvTutorial1Big">편리함</string>
    <string name="tvTutorial1Small">GRAMy와 함께 언제 어디서든 재고 현황을 확인해보세요.</string>
    <string name="tvTutorial1Small2">사용자가 어디에 있든, 손쉽게 재고를 파악할 수 있습니다.</string>

    <!-- fragment_tutorial2.xml-->
    <string name="tvTutorial2Big">정확함</string>
    <string name="tvTutorial2Small">남은 재고량을 정확하게 알려드립니다.</string>
    <string name="tvTutorial2Small2">정확한 재고량을 바탕으로 매장의 순수익을 올려보세요!</string>

    <!-- fragment_tutorial3.xml-->
    <string name="tvTutorial3Big">손쉬운 사용</string>
    <string name="tvTutorial3Small">손쉬운 조작법으로 누구나 이용할 수 있습니다.</string>
    <string name="tvTutorial3Small2">GRAMy에게 문의주시면 언제든지 도와드리겠습니다.</string>

    <!-- fragment_tutorial4.xml-->
    <string name="tvTutorial4Big">다양한 서비스</string>
    <string name="tvTutorial4Small">지금 바로 GRAMy를 주변에게 공유해보세요.</string>
    <string name="tvTutorial4Small2">GRAMy는 사용자에게 다양한 기능을 제공하고자</string>
    <string name="tvTutorial4Small3">열심히 노력하고 있습니다. 감사합니다!</string>

    <!-- HomeMain--> <!-- Pd:production / Mg:manage-->
    <string name="btnGoPdCheck">실시간 재고 확인</string>
    <string name="btnGoReport">통계 리포트</string>
    <string name="btnGoBoard">게시판</string>
    <string name="btnGoMgShelf">선반 관리</string>

    <!-- Home-->
    <string name="tvTitleGramy">GRAMy</string>

    <!-- ProgressBar-->
    <string name="progressBar"></string>

    <!--go_ck_pd-->
    <string name="btnChange">등록 및 위치 변경</string>
    <string name="tvLocation">위치</string>
    <string name="tvShelf">비품 선반</string>
    <string name="tvStock">미등록</string>

    <!-- setting_item-->
    <string name="switchBtn"></string>
    <string name="tvVersion">6.0.7</string>

    <!-- add_store-->
    <string name="tvAddStore">가게 추가</string>
    <string name="btnBack"></string>
    <string name="tvAddStoreSub">현재 어플에 등록된 가게 외에 추가로 \n가게를 등록해보세요.</string>
    <string name="btnModifyStore">수정</string>
    <string name="btnEnrollStore">등록</string>
    <string name="tvStore">현재 등록된 가게입니다.</string>
    <string name="tvCurrentStore">동명동 \'행복한 담벼락\'</string>

    <!-- beta_service-->
    <string name="tvBetaService">실험실</string>
    <string name="tvBetaTitle">GRAMy 실험실에 오신 것을 환영합니다.</string>
    <string name="tvBetaSub">서비스 향상을 위해 GRAMy는 항상 노력하고 있습니다. \n이 곳에서 개발 예정인 기술들을 확인해보세요.</string>
    <string name="tvBetaMessage">내 상권 안에 새로 생긴 가게 구경하기</string>
    <string name="tvBetaMessage2">발주 아이템 최저가 찾기</string>
    <string name="tvBetaMessage3">지금까지의 모든 통계그래프 확인하기</string>

    <!-- alarm-->
    <string name="tvAlarm">알람설정</string>
    <string name="tvAlarmTitle">꼭 필요한 알람만 듣고 싶으신가요? \n이 곳에서 설정 할 수 있습니다.</string>
    <string name="tvAlarmAll">전체 PUSH 알림 허용</string>
    <string name="tvMessage">재고 부족 알람 등 필수 알람은 위 설정 여부와 무관하게 받을 수 있습니다.\n기기의 알림 설정은 휴대폰 설정>알림>GRMAy에서 변경할 수 있습니다.</string>
    <string name="tvCommercial">광고성 정보 수신 동의</string>
    <string name="tvCommSub">쿠폰 지급 등 혜택에 관한 알림을 받을 수 있습니다.</string>
    <string name="tvNight">야간 수신 동의</string>
    <string name="tvNigSub">야간(21:00~08:00)에 정보성 푸시알림을 받을 수 있습니다.</string>
    <string name="swAll"></string>
    <string name="swComm"></string>
    <string name="swNight"></string>

    <!-- fragment_frag_newsmain.xml -->
    <string name="tvNewsCategory">뉴스</string>
    <string name="tvBoardCategory">게시판</string>

    <!-- <string name="tvNoAlarm">새로운 소식이 없어요.\n오늘의 소식이 생기면 알려드릴게요!</string> -->

    <!-- activity_modify -->
    <string name="tvModify">개인정보수정</string>

    <!-- activity_go_board.xml -->
    <string name="fab_content_desc">글 쓰기</string>
    <string name="tvBoardTitle">자유 게시판</string>

    <!-- activity_board_write.xml -->
    <string name="tvBoardWriteTitle">게시글 작성</string>
    <string name="edtWriteTitleHint">제목</string>
    <string name="edtWriteContentHint">내용</string>
    <string name="tvWriteBoard">작성</string>

    <!-- activity_board_update.xml -->
    <string name="tvUpdateBoard">수정</string>
    <string name="tvBoardUpdateTitle">게시글 수정</string>
    <string name="tvBoardUpdateBack">취소</string>

    <!-- 게시판 액티비티 공용 string -->
    <string name="tvBoardBack">뒤로</string>

    <!-- activity_comments.xml -->
    <string name="btnWriteComment">작성</string>
    <string name="edtComment">댓글을 입력하세요</string>

    <!-- comments_item.xml -->
    <string name="tvEditComment">수정</string>
    <string name="tvDeleteComment">삭제</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 페이스북 -->
    <string name="facebook_app_id">374569864723034</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">672585b0577dba8fd54b318a9b912882</string>

    <!--StockActivity-->
    <string name="operationSwitchName">실시간측정</string>
    <string name="tvStockName">재고명</string>
    <string name="tvShelfLifeName">유통기한</string>
    <string name="tvWeightName">현재무게</string>
    <string name="tvOrderName">주문방법</string>
    <string name="edtStockHint">입력하세요</string>
    <!--StockCheckActivity-->
    <string name="tvRegisterName">등록날짜</string>
    <string name="tvCurrentWeight">무게</string>
    <string name="checkModifyBtnName">수정</string>
    <string name="checkCancelBtnName">취소</string>

    <!-- Noti -->
    <string name="channel_name">gramy</string>
    <string name="channel_description">알람</string>
    <!--shelf_item.xml-->
    <string name="shelfselect_btn">선택</string>


</resources>