<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="60dp"
        android:background="#284E4E4E"
        android:rotation="180"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="162dp" />

    <Button
        android:id="@+id/btnFindId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/btnFindId"
        android:textColor="#303030"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="459dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/facebook"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="162dp" />

    <Button
        android:id="@+id/btnGoJoin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btnGoJoin"
        app:cornerRadius="50dp"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="605dp" />

    <EditText
        android:id="@+id/edtPw"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="  please enter your pw"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="353dp" />

    <CheckBox
        android:id="@+id/checkAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkAutoLogin"
        android:textColor="#333333"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="459dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/naver"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/tvPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvPw"
        android:textColor="#333333"
        android:textSize="16dp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="366dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/btnLogin"
        app:cornerRadius="50dp"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="411dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kakao"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvLogin"
        android:textColor="#333333"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="275dp" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvID"
        android:textColor="#333333"
        android:textSize="16dp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="329dp" />

    <Button
        android:id="@+id/btnFindPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/btnFindPw"
        android:textColor="#303030"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="459dp" />

    <TextView
        android:id="@+id/loginSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/loginSub"
        android:textColor="#333333"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/loginTitle"
        android:textColor="#333333"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/tvGoJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvGoJoin"
        android:textColor="#333333"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="520dp" />

    <EditText
        android:id="@+id/edtId"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="  please enter your id"
        android:inputType="textImeMultiLine|textNoSuggestions"
        android:shadowColor="#FFFFFF"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="311dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="60dp"
        android:background="#284E4E4E"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="162dp" />

</androidx.constraintlayout.widget.ConstraintLayout>