<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialFragment.TutorialFragmentPage4">

    <ImageView
        android:id="@+id/imgTutorial4"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTutoria4Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvTutorial4Big"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imgTutorial4"
        app:layout_constraintStart_toStartOf="@+id/imgTutorial4"
        app:layout_constraintTop_toBottomOf="@+id/imgTutorial4" />

    <TextView
        android:id="@+id/tvTutorial4_Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvTutorial4Small"
        app:layout_constraintEnd_toEndOf="@+id/tvTutoria4Big"
        app:layout_constraintStart_toStartOf="@+id/tvTutoria4Big"
        app:layout_constraintTop_toBottomOf="@+id/tvTutoria4Big" />

    <Button
        android:id="@+id/btnTutorialEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/btnTutorialEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>